Fix for the background sometime clipping on click
The tradeoff? The main-content div is now off-center by 8 pixels.
I will have to live with this.

--- a/css/css.css
+++ b/css/css.css
@@ -4,6 +4,9 @@ body {
 	height: 100%;
 	width: 100%;
 
+	margin: 0px;
+	padding: 0px; 
+
 	overflow-x: hidden;
 
 	background-color: #424242;
@@ -90,16 +93,19 @@ body {
 }
 
 #main-content {
+
 	margin-top: 20px;
-	margin-bottom: 20px;
+	margin-bottom: 40px;
 
 	margin-left: auto;
 	margin-right: auto;
 
-	padding-top: 40px;
 	padding-left: 80px;
+	padding-right: 80px;
+	padding-top: 40px;
+	padding-bottom: 120px;
 
-	width: 1080px;
+	width: 880px;
 	height: 1400px;
 
 	position: relative;
@@ -111,8 +117,10 @@ body {
 	top: 0;
 	left: 0;
 
-	width: 1080px !important;
-	height: 1400px !important;
+	margin-left: -8px;
+
+	width: 100%;
+	height: 100%;
 }
 
 hr { 
@@ -250,8 +258,8 @@ hr {
 	margin-left: 50px;
 }
 
-/* COLLECTIONS */
-#div-collections {
+/* BH */
+#div-bh {
 	display: inline-block;
 	width: 40px;
 	vertical-align: top;
@@ -444,10 +452,6 @@ hr {
 
 #slayer {
 	width: 280px;
-}
-
-#dust_battlestaff {
-	margin-left: 40px;
 }
 
 
